crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__unclosed_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/unclosed_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..28,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..7,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 0..7,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..7,
                                node_index: NodeIndex(None),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..6,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                                runtime_args: None,
                                runtime_bases: None,
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 9..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 13..16,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 16..18,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 24..28,
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | call(x,
  |        ^ Syntax Error: invalid syntax
2 |
3 | def foo():
4 |     pass
  |
